--- a/modules-available/webinterface/templates/https.html
+++ b/modules-available/webinterface/templates/https.html
@@ -29,9 +29,9 @@
 			<div class="input-group" onclick="$('#moff').prop('checked', true);
 					$('#wcustom').hide()">
 				<span class="input-group-addon">
-					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+					<div class="radio">
 						<input id="moff" type="radio" name="mode" value="off">
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control">
@@ -42,9 +42,9 @@
 			<div class="input-group" onclick="$('#mrandom').prop('checked', true);
 					$('#wcustom').hide()">
 				<span class="input-group-addon">
-					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+					<div class="radio">
 						<input id="mrandom" type="radio" name="mode" value="random">
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control">
@@ -54,9 +54,9 @@
 			<div class="input-group" onclick="$('#mcustom').prop('checked', true);
 					$('#wcustom').show()">
 				<span class="input-group-addon">
-					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+					<div class="radio">
 						<input id="mcustom" type="radio" name="mode" value="custom">
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control">
@@ -89,9 +89,9 @@ MIIFfTCCA...
 			<br>
 			<div class="input-group">
 				<span class="input-group-addon">
-					<div class="checkbox" style="margin: 0; line-height: normal; text-align: left">
+					<div class="checkbox">
 						<input id="httpsredirect" type="checkbox" name="httpsredirect" value="on" {{redirect_checked}}>
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control" onclick="$('#httpsredirect').prop('checked', !$('#httpsredirect').prop('checked'))">
@@ -100,9 +100,9 @@ MIIFfTCCA...
 			</div>
 			<div class="input-group">
 				<span class="input-group-addon">
-					<div class="checkbox" style="margin: 0; line-height: normal; text-align: left">
+					<div class="checkbox">
 						<input id="usehsts" type="checkbox" name="usehsts" value="on" {{hsts_checked}}>
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control" onclick="$('#usehsts').prop('checked', !$('#usehsts').prop('checked'))">
