--- a/modules-available/webinterface/templates/passwords.html
+++ b/modules-available/webinterface/templates/passwords.html
@@ -7,9 +7,9 @@
 			<p>{{lang_passwordsDescription}}</p>
 			<div class="input-group" onclick="$('#pmshow').prop('checked', true)">
 				<span class="input-group-addon">
-					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+					<div class="radio">
 						<input id="pmshow" type="radio" name="mode" value="show" {{selected_show}}>
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control">
@@ -18,9 +18,9 @@
 			</div>
 			<div class="input-group" onclick="$('#pmhide').prop('checked', true)">
 				<span class="input-group-addon">
-					<div class="radio" style="margin: 0; line-height: normal; text-align: left">
+					<div class="radio">
 						<input id="pmhide" type="radio" name="mode" value="hide" {{selected_hide}}>
-						<label style="padding: 0"></label>
+						<label></label>
 					</div>
 				</span>
 				<span class="form-control">
