[syslog, statistics] Pretty print time, shorten CPU model in list

--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -63,7 +63,7 @@
 			{{#rmmodule}}<div class="small">{{lang_runMode}}: <a class="slx-bold" href="?do=runmode&amp;module={{rmmodule}}">{{rmmodule}}</a></div>{{/rmmodule}}
 			</td>
 			<td data-sort-value="{{clientip}}"><b><a href="?do=Statistics&amp;show=list&amp;filters=subnet={{subnet}}">{{subnet}}</a>{{lastoctet}}</b><br>{{macaddr}}</td>
-			<td data-sort-value="{{lastseen_int}}" class="text-right">{{lastseen}}</td>
+			<td data-sort-value="{{lastseen_int}}" class="text-right text-nowrap">{{lastseen}}</td>
 			<td class="{{kvmclass}}">{{kvmstate}}</td>
 			<td data-sort-value="{{gbram}}" class="text-right {{ramclass}}">{{gbram}}&thinsp;GiB</td>
 			<td data-sort-value="{{gbtmp}}" class="text-right {{hddclass}}">
