[statistics] Restore client list heading

--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -1,3 +1,5 @@
+<h2>{{lang_clientList}} ({{rowCount}})</h2>
+
 <form method="post" action="?do=statistics">
 <input type="hidden" name="token" value="{{token}}">
 <input type="hidden" name="redirect" value="?{{redirect}}">
