[statistics] Fix link to runmode in client details view

--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -84,7 +84,7 @@
 						<tr>
 							<td class="text-nowrap">{{lang_runMode}}</td>
 							<td>
-								<a href="?do={{modeid}}">{{moduleName}}</a> – {{modeName}}
+								<a href="?do=runmode&amp;module={{module}}">{{moduleName}}</a> – {{modeName}}
 							</td>
 						</tr>
 					{{/modeid}}
