[dnbd3] Minor UI tweaks

--- a/modules-available/dnbd3/templates/page-server-locations.html
+++ b/modules-available/dnbd3/templates/page-server-locations.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<div class="buttonbar text-right">
-		<button type="submit" class="btn btn-success" name="action" value="savelocations">
+		<button type="submit" class="btn btn-primary" name="action" value="savelocations">
 			<span class="glyphicon glyphicon-floppy-disk"></span>
 			{{lang_save}}
 		</button>
