[locationinfo] Calling the update function after the timetable arrived from the backend

--- a/modules-available/locationinfo/templates/frontend-summary.html
+++ b/modules-available/locationinfo/templates/frontend-summary.html
@@ -264,6 +264,7 @@
 				}
 				ComputeCurrentState(rooms[json[i].id]);
 			}
+			update();
 		}
 
 		/**
@@ -316,7 +317,6 @@
 				updateCourseText(room.id, "Geschlossen");
 				updateCoursTimer(room.id, "");
 			}
-
 		}
 
 		/**
