--- a/modules-available/sysconfig/templates/ad_ldap-checkconnection.html
+++ b/modules-available/sysconfig/templates/ad_ldap-checkconnection.html
@@ -26,6 +26,10 @@
 		<input name="ssl" value="on" type="hidden">
 		<input type="hidden" name="certificate" value="{{certificate}}">
 		{{/ssl}}
+		{{#mapping}}
+			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
+		{{/mapping}}
+
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
 		<button type="submit" class="btn btn-primary">&laquo; {{lang_back}}</button>
 	</form>
@@ -47,6 +51,9 @@
 		<input id="fingerprint" name="fingerprint" value="" type="hidden">
 		<input id="certificate" type="hidden" name="certificate" value="{{certificate}}">
 		{{/ssl}}
+		{{#mapping}}
+			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
+		{{/mapping}}
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
 		<input name="originalbinddn" value="{{binddn}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary" style="display:none">{{lang_next}} &raquo;</button>
