[locationinfo] Fix handling of invalid backends, remove dummy-backend in production

--- a/modules-available/locationinfo/templates/page-locations.html
+++ b/modules-available/locationinfo/templates/page-locations.html
@@ -21,7 +21,7 @@
 					<span class="glyphicon glyphicon-edit"></span>
 				</a>
 			</td>
-			<td>
+			<td {{#backendMissing}}class="text-danger"{{/backendMissing}}>
 				{{backend}}
 			</td>
 			<td>
